src/test/ui/fn_once-moved.stderr
error[E0382]: use of moved value: `debug_dump_dict`
  --> $DIR/fn_once-moved.rs:21:5
   |
16 |         for (key, value) in dict {
   |                             ---- dict moved here
...
20 |     debug_dump_dict();
   |     --------------- value moved here
21 |     debug_dump_dict();
   |     ^^^^^^^^^^^^^^^ value used here after move
   |
   = help: closure cannot be invoked more than once because it moves the variable `dict` out of its environment

error: aborting due to previous error

